--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,38 @@
     "cSpell.ignoreWords": [
         "activ",
         "activkids",
-        "installation"
+        "app",
+        "application",
+        "backend",
+        "clone",
+        "com",
+        "create",
+        "db",
+        "down",
+        "frontend",
+        "git",
+        "github",
+        "https",
+        "in",
+        "installation",
+        "installation to use this app clone down the repository in terminal git https github com rehmanali activkids backend run migrations rails db create migrate seed next server s p now with frontend application",
+        "migrate",
+        "migrations",
+        "next",
+        "now",
+        "p",
+        "rails",
+        "rehmanali",
+        "repository",
+        "run",
+        "s",
+        "seed",
+        "server",
+        "terminal",
+        "the",
+        "this",
+        "to",
+        "use",
+        "with"
     ]
 }
